# std-tmp

./: .gitignore  README.md  alembic.ini  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: 00b796d29e01_refactor_rbac_to_code_only_permissions.py  b3ea9185dbca_initial_migration.py  d2248cf3a2ac_create_roles_table.py
app/: admin.py  main.py
app/api/: deps.py  exception_handlers.py
app/api/routers/: admin.py  profiles.py  rbac.py
app/auth/: auth.py
app/core/: config.py  exceptions.py  logging.py  permissions.py
app/crud/: base.py  crud_rbac.py
app/db/: base.py  initial_data.py  session.py
app/models/: rbac.py  user.py
app/schemas/: rbac.py  user.py
app/services/payment/: models.py  router.py  schemas.py  service.py
app/services/payment/providers/: base.py  razorpay.py
